[package]
name = "rce"
description = "library for constructing command-line tools"
version = "0.0.2"
edition = "2021"
authors = ["Real Microsoft", "husky (fekhesk)"]
homepage = "https://github.com/realmicrosoft/rce"
repository = "https://github.com/realmicrosoft/rce"
license = "Apache-2.0"
readme = "README.md"
