[package]
name = "rce"
description = "library for constructing command-line tools"
version = "0.0.3"
edition = "2021"
authors = ["Real Microsoft", "husky (fekhesk)"]
homepage = "https://github.com/voremicrocomputers/rce"
repository = "https://github.com/voremicrocomputers/rce"
license = "Apache-2.0"
readme = "README.md"
